docs/reference/k8s/step-25-final-project/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: step25
  labels:
    course: k8s-learn
    step: "25"
